[package]
name = "rust-uniswap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "rust-uniswap-server"
path = "src/server.rs"

[[bin]]
name = "rust-uniswap-client"
path = "src/client.rs"


[dependencies]
ethnum = "1.5.0"
prost = "0.12.3"
rust_decimal = "1.35.0"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.10.2"
web3 = "0.19.0"


[build-dependencies]
tonic-build = "0.10.2"
